appId: ${APP_ID}
---
- runFlow:
    when:
      platform: Android
    commands:
      - repeat:
          times: 2
          while:
            visible: "Close sheet"
          commands:
            - tapOn:
                id: android:id/input_method_nav_back
                optional: true
            - scrollUntilVisible:
                element:
                  text: "Back"
                direction: DOWN
            - tapOn: "Back"
            - waitForAnimationToEnd
      - extendedWaitUntil:
          notVisible: "Close sheet"
          timeout: 15000
      - repeat:
          times: 2
          while:
            notVisible:
              id: home-settings
          commands:
            - tapOn: "Navigate up|Go back"
            - waitForAnimationToEnd
- runFlow:
    when:
      platform: iOS
    commands:
      - repeat:
          times: 3
          while:
            notVisible:
              id: home-menu
          commands:
            - swipe:
                start: "50%,10%"
                end: "50%,95%"
                duration: 700
